--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,13 @@
     "require": {
         "php": ">=5.6.4",
         "doctrine/dbal": "^2.5",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.4.*",
+        "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.3.0"
+        "laravelcollective/html": "^5.3.0",
+        "omnipay/paypal": "~2.0",
+        "symfony/event-dispatcher": "2.8"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
